# Syn

./: CMakeLists.txt  main.cpp
Client/: CMakeLists.txt  Client.cpp  Client.h
Client/Mem/: CMakeLists.txt  Mem.cpp  Mem.h
Client/SDK/: CMakeLists.txt  Minecraft.cpp  Minecraft.h
Client/SDK/Classes/: Actor.h  ClientInstance.h  GameMode.h  GuiData.h  Level.h  MinecraftGame.h  Player.h
Client/Syn/: CMakeLists.txt
Client/Syn/Category/: CMakeLists.txt  Category.cpp  Category.h
Client/Syn/Manager/: CMakeLists.txt  Manager.cpp  Manager.h
Client/Syn/Module/: CMakeLists.txt  Module.cpp  Module.h
Client/Syn/Module/Modules/: CMakeLists.txt
Client/Syn/Module/Modules/Combat/: BoostHit.cpp  BoostHit.h  CMakeLists.txt  Hitbox.cpp  Hitbox.h  Killaura.cpp  Killaura.h
Client/Syn/Module/Modules/Misc/: CMakeLists.txt  TestMod.cpp  TestMod.h
Client/Syn/Module/Modules/Movement/: AirJump.cpp  AirJump.h  CMakeLists.txt  Speed.cpp  Speed.h
Client/Syn/Module/Modules/Player/: AutoSprint.cpp  AutoSprint.h  CMakeLists.txt  DirectionalPhase.cpp  DirectionalPhase.h  Nuker.cpp  Nuker.h
Client/Syn/Module/Modules/Visuals/: CMakeLists.txt  ClickGui.cpp  ClickGui.h  ModuleList.cpp  ModuleList.h  TabGui.cpp  TabGui.h
Client/Utils/: CMakeLists.txt  Utils.cpp  Utils.h
Includes/: CMakeLists.txt
Includes/imgui/: CMakeLists.txt  imgui_impl_win32.cpp
Includes/kiero/: CMakeLists.txt
